textwire/testdata/good/before/insert-is-optional/index.tw
@use("layout")

<!-- Intentionally, no title insert here -->

@insert("content")
<h1>Insert is optional</h1>

<p>Here is more here</p>
@end