textwire/testdata/bad/use-inside-tpl/index.tw
@use ('layout')

@insert ('content')
<h1>Some title is here</h1>
@end
